# ET-HACKATHON

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: cascade.py  compliance.py  graph.py  query.py  rfi.py  sld.py  verify.py
backend/app/core/: config.py  units.py
backend/app/models/: cascade.py  graph.py  rfi.py  schema.py  sld.py
backend/app/services/cascade/: simulator.py
backend/app/services/compliance/: corpus_extractor.py  evaluator.py
backend/benchmark/: corpus.py  ragas_eval.py  report.py  run.py  schema.py  scoring.py
backend/benchmark/systems/: bm25_baseline.py  cascade_answerer.py  fused_retrieval.py  ours.py  ours_extractor.py  sld_answerer.py  vanilla_rag.py
backend/cascade/: dag.py  mitigate.py  precompute.py  simulate.py
backend/graph/: build.py  neo4j_sync.py  precompute.py
backend/ingestion/: evaluate_requirements.py  extract.py  ingest.py  models.py  parse.py
backend/retrieval/: cache_demo_queries.py  corpus.py  hybrid.py  precompute.py  router.py
backend/rfi/: dedup.py  parse.py  precompute.py
backend/sld/: connect.py  dataset.py  detect.py  ocr.py  precompute.py  redundancy.py  symbols.py  topology.py  train.py
backend/tests/: test_compliance_evaluator.py  test_evaluate_requirements.py  test_graph_build.py  test_hybrid_retrieval.py  test_mitigate.py  test_redundancy.py  test_rfi_dedup.py  test_router_dispatch.py  test_simulate.py  test_units.py  test_verify_api.py
data/: cascade_lookup.json  (+7 more)
(+59 files in other folders)
