[project]
name = "epc-project-intelligence"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-multipart>=0.0.12",
    "instructor>=1.6",
    "groq>=0.11",
    "google-generativeai>=0.8",
    "pint>=0.24",
    "docling>=2.5",
    "camelot-py[cv]>=0.11",
    "paddleocr>=2.9",
    "paddlepaddle>=3.0",
    "qdrant-client>=1.11",
    "rank-bm25>=0.2.2",
    "networkx>=3.4",
    "numpy>=2.1",
    "neo4j>=5.25",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "ultralytics>=8.3",
    "opencv-python-headless>=4.10",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "ingestion*", "cascade*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
